Closed #201, Add rich text display in indie space area

--- a/app/views/indie_spaces/index.html.slim
+++ b/app/views/indie_spaces/index.html.slim
@@ -10,6 +10,9 @@
 - else
   section#indie-space
     .container.mt-5.mb-4
+      .col-12
+        = sanitize current_site.indie_space_description
+    .container.mt-5.mb-4
       .row.flex-warp
         - @games.each do |game|
           .align-self-stretch.d-flex.mb-3.col-md-4.col-sm-12
