Fixed #219, speaker session description link invisible

--- a/app/views/speakers/show.html.slim
+++ b/app/views/speakers/show.html.slim
@@ -23,5 +23,5 @@ section#speaker
             .session__time
               span.fa.fa-clock-o.mr-2
               = agenda.time&.name || 'TBA'
-            .session_description
+            .session__description
               = sanitize agenda.description
