--- a/app/views/admin/agendas/_form.html.slim
+++ b/app/views/admin/agendas/_form.html.slim
@@ -4,6 +4,9 @@
       = f.input :subject, as: :string
       = f.input :description, as: :text, input_html: { data: { editor: true }, rows: 20 }
       = f.association :speakers, input_html: { class: 'select2' }
+      = f.input :language, collection: Agenda.languages.keys, include_blank: false
+      = f.input :translated_language, collection: Agenda.translated_languages.keys
+      = f.input :translated_type, collection: Agenda.translated_types.keys
       = f.association :room
       = f.association :time
       = f.input :order
