--- a/app/assets/stylesheets/modules/_session.scss
+++ b/app/assets/stylesheets/modules/_session.scss
@@ -13,6 +13,12 @@
   &__header {
     display: none;
 
+    &.thead-dark {
+      th {
+        border-right: 1px solid $white;
+      }
+    }
+
     @include media-breakpoint-up(md) {
       display: table-header-group;
     }
@@ -36,6 +42,8 @@
 
   &__time, &__session {
     display: block;
+
+    border-right: 1px solid $white;
 
     @include media-breakpoint-up(md) {
       display: table-cell;
