--- a/app/views/agendas/_agenda.html.slim
+++ b/app/views/agendas/_agenda.html.slim
@@ -3,5 +3,13 @@ article.session
   p
     = agenda_speaker_links(agenda.speakers)
   p
+    / TODO: Improve translation display
+    - if agenda.language.present?
+      - if agenda.translated_language.present?
+        span.session__badge.badge.badge-primary
+          | #{agenda.language} → #{agenda.translated_language}
+      - else
+        span.session__badge.badge.badge-primary = agenda.language
+  p
     - agenda.tags.each do |tag|
       span.session__badge.badge.badge-pink.px-2.py-1 = tag.name
