Closed #226, allow admin change slide interval

--- a/app/views/pages/index/_slider.html.slim
+++ b/app/views/pages/index/_slider.html.slim
@@ -1,4 +1,4 @@
-section#slider.carousel.slide[data-ride="carousel" data-interval="5000"]
+section#slider.carousel.slide[data-ride="carousel"]
   .carousel-inner
     / TODO: User render collection or empty style
     - if @sliders.empty?
