Update bootstrap to support slider interval

--- a/app/views/sliders/_slider.html.slim
+++ b/app/views/sliders/_slider.html.slim
@@ -1,2 +1,2 @@
-.carousel-item[class="#{slider_iteration.first? ? 'active' : ''}" data-interval="#{slider.interval || 5000}"]
+.carousel-item.slide[class="#{slider_iteration.first? ? 'active' : ''}" data-interval="#{slider.interval || 5000}"]
   = image_tag slider.image_url(:large), class: 'd-block w-100'
