Closed #235, add order to indie space games

--- a/app/views/admin/games/_form.html.slim
+++ b/app/views/admin/games/_form.html.slim
@@ -6,6 +6,7 @@
       = f.input :team, as: :string
       = f.input :website
       = f.input :video
+      = f.input :order
       = f.input :thumbnail do
         = f.input_field :thumbnail
         - if @game.thumbnail.present?
