--- a/app/views/admin/games/_game.html.slim
+++ b/app/views/admin/games/_game.html.slim
@@ -2,6 +2,7 @@ tr
   td = game.id
   td = link_to game.name, edit_admin_game_path(game)
   td = game.team
+  td = game.order
   td
     .btn-group
       = link_to t('.destroy'), admin_game_path(game), class: 'btn btn-danger', method: :delete, data: { confirm: t('shared.destroy_confirm') }
