--- a/app/views/speakers/show.html.slim
+++ b/app/views/speakers/show.html.slim
@@ -22,7 +22,10 @@ section#speaker
             h5.session__subject = agenda.subject
             .session__time
               span.fa.fa-clock-o.mr-2
-              = agenda.time&.name || 'TBA'
+              - if agenda.begin_at.present? && agenda.time.present?
+                = "#{agenda.time.day.label} - #{agenda.begin_at} - #{agenda.end_at}"
+              - else
+                = agenda.time&.name || 'TBA'
             - if agenda.language.present?
               .session__language
                 span = t(".lang.#{agenda.language.downcase}")
