Add CoC to navigation

--- a/app/views/shared/_footer.html.slim
+++ b/app/views/shared/_footer.html.slim
@@ -1,4 +1,4 @@
 footer#footer
   .container.mt-5.mb-3
     .col.copyright-text.text-center.text-black-50
-      Copyrights © #{Date.today.year} All Rights Reserved, Powered by #{t('site_name')}
+      Copyrights © #{Date.today.year} All Rights Reserved, Powered by #{t('site_name')}.
