--- a/app/views/shared/_nav.html.slim
+++ b/app/views/shared/_nav.html.slim
@@ -6,8 +6,8 @@ nav#main-menu.navbar.navbar-expand-lg.bg-white.navbar-light.sticky-top
     button.navbar-toggler type="button" data-toggle="collapse" data-target="#navbar-items" aria-controls="navbar-items" aria-expanded="false" aria-label="Toggle navigation"
       span.navbar-toggler-icon
     .collapse#navbar-items.navbar-collapse
-      - unless cfp_only?
-        ul.navbar-nav.is-uppercase
+      ul.navbar-nav.is-uppercase
+        - unless cfp_only?
           = nav_item t('.home'), root_path
           = nav_item t('.news'), news_index_path
           = nav_item t('.speakers'), speakers_path
@@ -17,6 +17,7 @@ nav#main-menu.navbar.navbar-expand-lg.bg-white.navbar-light.sticky-top
             = nav_item t('.agenda'), agenda_path
           = nav_item t('.sponsors'), sponsors_path
           = nav_item t('.indie_spaces'), indie_spaces_path
+        = nav_item t('.code_of_conduct'), code_of_conduct_path
       ul.navbar-nav.ml-auto
         = language_toggle_button
         - if current_site.ticket_buy_link.present?
