--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -1,11 +1,11 @@
 doctype html
 html
   head
-    title = page_title
     meta[name="viewport" content="width=device-width, initial-scale=1"]
     meta[http-equiv="X-UA-Compatible" content="IE=edge"]
     = alternate_langs
     = csrf_meta_tags
+    = seo_tags
 
     = stylesheet_link_tag    'https://use.fontawesome.com/b2e3e84e95.css', media: 'all'
     = stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload'
