--- a/app/views/shared/_nav.html.slim
+++ b/app/views/shared/_nav.html.slim
@@ -21,5 +21,5 @@ nav#main-menu.navbar.navbar-expand-lg.bg-white.navbar-light.sticky-top
         = nav_item t('.code_of_conduct'), code_of_conduct_path
       ul.navbar-nav.ml-auto
         = language_toggle_button
-        - if current_site.ticket_buy_link.present?
+        - if display_buy_ticket_button?
           = link_to t('.buy_ticket'), current_site.ticket_buy_link, target: '_blank', class: 'btn btn-pink'
