Add page description for SEO

--- a/app/views/agendas/show.html.slim
+++ b/app/views/agendas/show.html.slim
@@ -1,4 +1,5 @@
-- title t('shared.nav.agenda')
+- title t('.title')
+- description t('.description')
 - # TODO: Add banner config
 - breadcrumb :agenda
 
