Fix site options check invalid

--- a/app/views/agendas/show.html.slim
+++ b/app/views/agendas/show.html.slim
@@ -3,7 +3,7 @@
 - # TODO: Add banner config
 - breadcrumb :agenda
 
-- if current_site.cfp_on_agenda_mode == 'true'
+- if current_site.cfp_on_agenda_mode?
   section.sec-pding
     .container
       .row
