--- a/app/views/shared/_nav.html.slim
+++ b/app/views/shared/_nav.html.slim
@@ -11,12 +11,12 @@ nav#main-menu.navbar.navbar-expand-lg.bg-white.navbar-light.sticky-top
           = nav_item t('.home'), root_path
           = nav_item t('.news'), news_index_path
           = nav_item t('.speakers'), speakers_path
-          - if current_site.cfp_on_agenda_mode == 'true'
+          - if current_site.cfp_on_agenda_mode?
             = nav_item t('.cfp'), agenda_path
           - else
             = nav_item t('.agenda'), agenda_path
           = nav_item t('.sponsors'), sponsors_path
-          - unless current_site.indie_space_disabled == 'true'
+          - unless current_site.indie_space_disabled?
             = nav_item t('.indie_spaces'), indie_spaces_path
         = nav_item t('.code_of_conduct'), code_of_conduct_path
       ul.navbar-nav.ml-auto
