--- a/app/views/shared/_nav.html.slim
+++ b/app/views/shared/_nav.html.slim
@@ -23,7 +23,12 @@ nav#main-menu.navbar.navbar-expand-lg.bg-white.navbar-light.sticky-top
         = language_toggle_button
         - if current_site.streaming_enabled?
           - if current_site.streaming_track_1_url.present?
-            = link_to t('.watch_now'), current_site.streaming_track_1_url, target: '_blank', class: 'btn btn-pink'
+            li.nav-item
+              = link_to t('.watch_now'), current_site.streaming_track_1_url, target: '_blank', class: 'btn btn-pink'
+          - if current_site.streaming_track_3_url.present?
+            li.nav-item.ml-2
+              = link_to t('.pre_register'), current_site.streaming_track_3_url, target: '_blank', class: 'btn btn-pink'
         - else
           - if current_site.ticket_buy_link.present?
-            = link_to t('.buy_ticket'), current_site.ticket_buy_link, target: '_blank', class: 'btn btn-pink'
+            li.nav-item
+              = link_to t('.buy_ticket'), current_site.ticket_buy_link, target: '_blank', class: 'btn btn-pink'
