--- a/app/views/shared/_nav.html.slim
+++ b/app/views/shared/_nav.html.slim
@@ -32,3 +32,8 @@ nav#main-menu.navbar.navbar-expand-lg.bg-white.navbar-light.sticky-top
           - if current_site.ticket_buy_link.present?
             li.nav-item
               = link_to t('.buy_ticket'), current_site.ticket_buy_link, target: '_blank', class: 'btn btn-pink'
+        / TODO: Rewrite to decorator
+        - if current_site.survey_enabled_at.present? && current_site.survey_enabled_at <= Time.zone.now.beginning_of_day
+          li.nav-item.ml-2
+            = link_to t('.survey'), current_site.survey_url, target: '_blank', class: 'btn btn-pink'
+
