--- a/app/views/admin/shared/_sidebar.html.slim
+++ b/app/views/admin/shared/_sidebar.html.slim
@@ -1,48 +1,47 @@
-aside.main-sidebar
-  section.sidebar
-    = render 'admin/shared/user_panel'
-    ul.sidebar-menu(data-widget="tree")
-      = admin_sidebar_item t('.dashboard'), admin_root_path, icon: 'dashboard'
-      / Cross Site Feature
-      - unless tenant_site?
-        = admin_sidebar_header t('.system')
-        = admin_sidebar_treeview t('.sites'), icon: 'sitemap' do
-          = admin_sidebar_item t('.list'), admin_sites_path, icon: 'list'
-          = admin_sidebar_item t('.new'), new_admin_site_path, icon: 'plus'
-      = admin_sidebar_header t('.general')
-      = admin_sidebar_treeview t('.news'), icon: 'newspaper-o' do
-        = admin_sidebar_item t('.list'), admin_news_index_path, icon: 'list'
-        = admin_sidebar_item t('.new'), new_admin_news_path, icon: 'plus'
-      = admin_sidebar_treeview t('.slider'), icon: 'picture-o' do
-        = admin_sidebar_item t('.list'), admin_sliders_path, icon: 'list'
-        = admin_sidebar_item t('.new'), new_admin_slider_path, icon: 'plus'
-      - if tenant_site?
-        = admin_sidebar_treeview t('.partner'), icon: 'handshake-o' do
-          = admin_sidebar_item t('.list'), admin_partners_path, icon: 'list'
-          = admin_sidebar_item t('.new'), new_admin_partner_path, icon: 'plus'
-          = admin_sidebar_item t('.types'), admin_partner_types_path, icon: 'folder-o'
-          = admin_sidebar_item t('.new_type'), new_admin_partner_type_path, icon: 'plus'
-        = admin_sidebar_treeview t('.sponsor'), icon: 'money' do
-          = admin_sidebar_item t('.list'), admin_sponsors_path, icon: 'list'
-          = admin_sidebar_item t('.new'), new_admin_sponsor_path, icon: 'plus'
-          = admin_sidebar_item t('.levels'), admin_sponsor_levels_path, icon: 'diamond'
-          = admin_sidebar_item t('.new_level'), new_admin_sponsor_level_path, icon: 'plus'
-        = admin_sidebar_treeview t('.speaker'), icon: 'users' do
-          = admin_sidebar_item t('.list'), admin_speakers_path, icon: 'list'
-          = admin_sidebar_item t('.new'), new_admin_speaker_path, icon: 'plus'
-        = admin_sidebar_treeview t('.agenda'), icon: 'file-text' do
-          = admin_sidebar_item t('.list'), admin_agendas_path, icon: 'list'
-          = admin_sidebar_item t('.new'), new_admin_agenda_path, icon: 'plus'
-          = admin_sidebar_item t('.rooms'), admin_rooms_path, icon: 'columns'
-          = admin_sidebar_item t('.new_room'), new_admin_room_path, icon: 'plus'
-          = admin_sidebar_item t('.days'), admin_agenda_days_path, icon: 'calendar'
-          = admin_sidebar_item t('.new_day'), new_admin_agenda_day_path, icon: 'plus'
-          = admin_sidebar_item t('.times'), admin_agenda_times_path, icon: 'clock-o'
-          = admin_sidebar_item t('.new_time'), new_admin_agenda_time_path, icon: 'plus'
-          = admin_sidebar_item t('.tags'), admin_agenda_tags_path, icon: 'tags'
-          = admin_sidebar_item t('.new_tag'), new_admin_agenda_tag_path, icon: 'plus'
-        = admin_sidebar_treeview t('.indie_space'), icon: 'gamepad' do
-          = admin_sidebar_item t('.list'), admin_games_path, icon: 'list'
-          = admin_sidebar_item t('.new'), new_admin_game_path, icon: 'plus'
-          = admin_sidebar_item t('.options'), edit_admin_indie_space_path, icon: 'gear'
-        = admin_sidebar_item t('.options'), edit_admin_options_path, icon: 'gear'
+aside.c-sidebar.c-sidebar-dark.c-sidebar-fixed.c-sidebar-lg-show
+  / = render 'admin/shared/user_panel'
+  ul.c-sidebar-nav.ps.ps--active-y(data-widget="tree")
+    = admin_sidebar_item t('.dashboard'), admin_root_path, icon: 'dashboard'
+    / Cross Site Feature
+    - unless tenant_site?
+      = admin_sidebar_header t('.system')
+      = admin_sidebar_treeview t('.sites'), icon: 'sitemap' do
+        = admin_sidebar_item t('.list'), admin_sites_path, icon: 'list'
+        = admin_sidebar_item t('.new'), new_admin_site_path, icon: 'plus'
+    = admin_sidebar_header t('.general')
+    = admin_sidebar_treeview t('.news'), icon: 'newspaper-o' do
+      = admin_sidebar_item t('.list'), admin_news_index_path, icon: 'list'
+      = admin_sidebar_item t('.new'), new_admin_news_path, icon: 'plus'
+    = admin_sidebar_treeview t('.slider'), icon: 'picture-o' do
+      = admin_sidebar_item t('.list'), admin_sliders_path, icon: 'list'
+      = admin_sidebar_item t('.new'), new_admin_slider_path, icon: 'plus'
+    - if tenant_site?
+      = admin_sidebar_treeview t('.partner'), icon: 'handshake-o' do
+        = admin_sidebar_item t('.list'), admin_partners_path, icon: 'list'
+        = admin_sidebar_item t('.new'), new_admin_partner_path, icon: 'plus'
+        = admin_sidebar_item t('.types'), admin_partner_types_path, icon: 'folder-o'
+        = admin_sidebar_item t('.new_type'), new_admin_partner_type_path, icon: 'plus'
+      = admin_sidebar_treeview t('.sponsor'), icon: 'money' do
+        = admin_sidebar_item t('.list'), admin_sponsors_path, icon: 'list'
+        = admin_sidebar_item t('.new'), new_admin_sponsor_path, icon: 'plus'
+        = admin_sidebar_item t('.levels'), admin_sponsor_levels_path, icon: 'diamond'
+        = admin_sidebar_item t('.new_level'), new_admin_sponsor_level_path, icon: 'plus'
+      = admin_sidebar_treeview t('.speaker'), icon: 'users' do
+        = admin_sidebar_item t('.list'), admin_speakers_path, icon: 'list'
+        = admin_sidebar_item t('.new'), new_admin_speaker_path, icon: 'plus'
+      = admin_sidebar_treeview t('.agenda'), icon: 'file-text' do
+        = admin_sidebar_item t('.list'), admin_agendas_path, icon: 'list'
+        = admin_sidebar_item t('.new'), new_admin_agenda_path, icon: 'plus'
+        = admin_sidebar_item t('.rooms'), admin_rooms_path, icon: 'columns'
+        = admin_sidebar_item t('.new_room'), new_admin_room_path, icon: 'plus'
+        = admin_sidebar_item t('.days'), admin_agenda_days_path, icon: 'calendar'
+        = admin_sidebar_item t('.new_day'), new_admin_agenda_day_path, icon: 'plus'
+        = admin_sidebar_item t('.times'), admin_agenda_times_path, icon: 'clock-o'
+        = admin_sidebar_item t('.new_time'), new_admin_agenda_time_path, icon: 'plus'
+        = admin_sidebar_item t('.tags'), admin_agenda_tags_path, icon: 'tags'
+        = admin_sidebar_item t('.new_tag'), new_admin_agenda_tag_path, icon: 'plus'
+      = admin_sidebar_treeview t('.indie_space'), icon: 'gamepad' do
+        = admin_sidebar_item t('.list'), admin_games_path, icon: 'list'
+        = admin_sidebar_item t('.new'), new_admin_game_path, icon: 'plus'
+        = admin_sidebar_item t('.options'), edit_admin_indie_space_path, icon: 'gear'
+      = admin_sidebar_item t('.options'), edit_admin_options_path, icon: 'gear'
