Update dashboard view

--- a/app/views/admin/dashboard/index.html.slim
+++ b/app/views/admin/dashboard/index.html.slim
@@ -1,4 +1,2 @@
-section.content-header
-  h1 Admin::Dashboard#index
-section.content
-  p Find me in app/views/admin/dashboard/index.html.slim
+.container-fluid
+  / TODO
