--- a/app/views/layouts/admin.html.slim
+++ b/app/views/layouts/admin.html.slim
@@ -12,4 +12,6 @@ html
       = render 'admin/shared/sidebar'
       .c-wrapper
         = render 'admin/shared/header'
-        = yield
+        .c-body
+          .c-main
+            = yield
