--- a/app/views/admin/shared/_header.html.slim
+++ b/app/views/admin/shared/_header.html.slim
@@ -10,15 +10,11 @@ header.c-header.c-header-light.c-header-fixed
         .dropdown-menu.dropdown-menu-right.pt-0
           .dropdown-header.bg-light.py-2
             strong = t('.all_sites')
-          = link_to Settings.site.default_domain, class: 'dropdown-item' do
-            = svg_icon('media/sprites/free.svg', 'cil-star', class: 'c-icon mfe-2')
-            = t('site_name')
+          = admin_navbar_site_item(t('site_name'), Settings.site.default_domain, icon: 'cil-star')
           - @navbar_sites.each do |site|
-            = link_to site.domain, class: 'dropdown-item' do
-              = svg_icon('media/sprites/free.svg', 'cil-square', class: 'c-icon mfe-2')
-              = site.name
+            = admin_navbar_site_item(site.name, site.domain)
           .dropdown-divider
-          = link_to root_path, class: 'dropdown-item' do
+          = link_to admin_sites_url(host: Settings.site.default_domain), class: 'dropdown-item' do
             = svg_icon('media/sprites/free.svg', 'cil-list', class: 'c-icon mfe-2')
             = t('.view_all')
 
