--- a/app/views/admin/sites/index.html.slim
+++ b/app/views/admin/sites/index.html.slim
@@ -1,16 +1,16 @@
-= admin_page_header t('.sites'), t('.manage_sites_on_system')
-.content
-  .row
-    .col-md-12
-      = admin_box do
-        = admin_box_body class: 'no-padding' do
-          table.table.table-striped
-            thead
-              tr
-                th.table__id-column #
-                th = t('.name')
-                th = t('.domain')
-                th = t('.actions')
-            tbody
-              = render @sites
-
+.container-fluid
+  .fade-in
+    .row
+      .col-md-12
+        = admin_box do
+          = admin_box_header t('.sites')
+          = admin_box_body do
+            table.table.table-striped.table-responsive-sm
+              thead
+                tr
+                  th.table__id-column #
+                  th = t('.name')
+                  th = t('.domain')
+                  th = t('.actions')
+              tbody
+                = render @sites
