--- a/app/views/admin/sites/edit.html.slim
+++ b/app/views/admin/sites/edit.html.slim
@@ -1,8 +1,9 @@
 = admin_page_header t('.update'), t('.edit_exists_site')
-.content
+.container-fluid
   .row
     .col-md-12
-      = admin_navtab_box do
-        / TODO: Add customize header
-        = admin_locale_navtab
-        = render 'form'
+      = admin_box do
+        = admin_box_header t('.edit_site')
+        = admin_box_body
+          = admin_locale_navtab
+          = render 'form'
