--- a/app/views/admin/sites/new.html.slim
+++ b/app/views/admin/sites/new.html.slim
@@ -1,7 +1,7 @@
 = admin_page_header t('.create'), t('.create_new_site')
-.content
+.container-fluid
   .row
     .col-md-12
       = admin_box do
-        = admin_box_header t('.create'), class: 'with-border'
+        = admin_box_header t('.create')
         = render 'form'
