--- a/app/views/admin/news/index.html.slim
+++ b/app/views/admin/news/index.html.slim
@@ -1,17 +1,18 @@
 = admin_page_header t('.news'), t('.publish_news')
-.content
-  .row
-    .col-md-12
-      = admin_box do
-        = admin_box_body class: 'no-padding' do
-          table.table.table-striped
-            thead
-              tr
-                th.table__id-column #
-                th = t('.title')
-                th = t('.author')
-                th = t('.status')
-                th.col-md-3 = t('.actions')
-            tbody
-              = render @news
-
+.container-fluid
+  .fade-in
+    .row
+      .col-md-12
+        = admin_box do
+          = admin_box_header title t('.news')
+          = admin_box_body do
+            table.table.table-striped.table-responsive-sm
+              thead
+                tr
+                  th.table__id-column #
+                  th = t('.title')
+                  th = t('.author')
+                  th = t('.status')
+                  th = t('.actions')
+              tbody
+                = render @news
