--- a/app/views/admin/sliders/edit.html.slim
+++ b/app/views/admin/sliders/edit.html.slim
@@ -1,7 +1,7 @@
 = admin_page_header t('.edit'), t('.edit_slider')
-.content
+.container-fluid
   .row
     .col-md-12
       = admin_box do
-        = admin_box_header t('.create'), class: 'with-border'
+        = admin_box_header title t('.edit')
         = render 'form'
