--- a/app/views/admin/sponsor_levels/index.html.slim
+++ b/app/views/admin/sponsor_levels/index.html.slim
@@ -1,15 +1,16 @@
 = admin_page_header t('.levels'), t('.manager_sponsor_levels')
-.content
-  .row
-    .col-md-12
-      = admin_box do
-        = admin_box_body class: 'no-padding' do
-          table.table.table-striped
-            thead
-              tr
-                th.table__id-column #
-                th = t('.name')
-                th = t('.order')
-                th.col-md-3 = t('.actions')
-            tbody
-              = render @levels
+.container-fluid
+  .fade-in
+    .row
+      .col-md-12
+        = admin_box do
+          = admin_box_body class: 'no-padding' do
+            table.table.table-striped
+              thead
+                tr
+                  th.table__id-column #
+                  th = t('.name')
+                  th = t('.order')
+                  th.col-md-3 = t('.actions')
+              tbody
+                = render @levels
