--- a/app/views/admin/speakers/_form.html.slim
+++ b/app/views/admin/speakers/_form.html.slim
@@ -1,7 +1,9 @@
 - Mobility.with_locale(admin_current_resource_locale) do
   = simple_form_for [:admin, @speaker] do |f|
+    = debug @speaker.errors
     = admin_box_body do
       = f.input :name, as: :string
+      = f.input :slug, as: :string
       = f.input :title, as: :string
       = f.input :order
       = f.input :description, as: :text, input_html: { data: { editor: true }, rows: 20 }
