Move Admin::Game to Admin::IndieSpace::Game

--- a/app/views/admin/indie_space/games/_game.html.slim
+++ b/app/views/admin/indie_space/games/_game.html.slim
@@ -1,8 +1,8 @@
 tr
   td = game.id
-  td = link_to game.name, edit_admin_game_path(game)
+  td = link_to game.name, edit_admin_indie_space_game_path(game)
   td = game.team
   td = game.order
   td
     .btn-group
-      = link_to t('.destroy'), admin_game_path(game), class: 'btn btn-danger', method: :delete, data: { confirm: t('shared.destroy_confirm') }
+      = link_to t('.destroy'), admin_indie_space_game_path(game), class: 'btn btn-danger', method: :delete, data: { confirm: t('shared.destroy_confirm') }
