--- a/app/views/admin/shared/_sidebar.html.slim
+++ b/app/views/admin/shared/_sidebar.html.slim
@@ -41,7 +41,7 @@ aside.c-sidebar.c-sidebar-dark.c-sidebar-fixed.c-sidebar-lg-show
         = admin_sidebar_item t('.tags'), admin_agenda_tags_path, icon: 'tags'
         = admin_sidebar_item t('.new_tag'), new_admin_agenda_tag_path, icon: 'plus'
       = admin_sidebar_treeview t('.indie_space'), icon: 'gamepad' do
-        = admin_sidebar_item t('.list'), admin_games_path, icon: 'list'
-        = admin_sidebar_item t('.new'), new_admin_game_path, icon: 'plus'
+        = admin_sidebar_item t('.list'), admin_indie_space_games_path, icon: 'list'
+        = admin_sidebar_item t('.new'), new_admin_indie_space_game_path, icon: 'plus'
         = admin_sidebar_item t('.options'), edit_admin_indie_space_path, icon: 'gear'
       = admin_sidebar_item t('.options'), edit_admin_options_path, icon: 'gear'
