--- a/app/views/admin/shared/_sidebar.html.slim
+++ b/app/views/admin/shared/_sidebar.html.slim
@@ -44,4 +44,7 @@ aside.c-sidebar.c-sidebar-dark.c-sidebar-fixed.c-sidebar-lg-show
         = admin_sidebar_item t('.list'), admin_indie_space_games_path, icon: 'list'
         = admin_sidebar_item t('.new'), new_admin_indie_space_game_path, icon: 'plus'
         = admin_sidebar_item t('.options'), edit_admin_indie_space_path, icon: 'gear'
+      = admin_sidebar_treeview t('.night_market'), icon: 'gamepad' do
+        = admin_sidebar_item t('.list'), admin_night_market_games_path, icon: 'list'
+        = admin_sidebar_item t('.new'), new_admin_night_market_game_path, icon: 'plus'
       = admin_sidebar_item t('.options'), edit_admin_options_path, icon: 'gear'
