Fix game video icon not display

--- a/app/components/game_component.html.erb
+++ b/app/components/game_component.html.erb
@@ -10,7 +10,7 @@
             <%= link_with_icon(website, @game.team, 'users') %>
           </div>
           <div class="indie-game__video">
-            <% link_with_icon(video, t('.view_video'), 'video-camera') %>
+            <%= link_with_icon(video, t('.view_video'), 'video-camera') %>
           </div>
         </div>
         <h3 class="indie-game__name text-pink"><%= name %></h3>
