--- a/app/views/night_market/index.html.erb
+++ b/app/views/night_market/index.html.erb
@@ -1,4 +1,5 @@
 <% content_for :disable_breadcrumb, true %>
+<%= render "slider" %>
 <section id="night-market">
   <div class="container mt-5 mb-4">
     <div class="row flex-warp">
