--- a/app/views/pages/index.html.slim
+++ b/app/views/pages/index.html.slim
@@ -8,7 +8,7 @@
         .col-md-12
           iframe#JotFormIFrame src="#{current_site.cfp_form_url}" allowtransparency="true" frameborder="0" style="width: 1px; min-width: 100%; height:539px; border:none;" scrolling="no"
 - else
-  = render 'pages/index/slider'
+  = render SliderComponent.new(id: 'slider', sliders: @sliders)
   = render 'pages/index/about'
   / TODO: Refactor - show ticket information only per-year sites
   - if current_site.streaming_enabled?
