Add night market description E2E testing

--- a/app/views/night_market/index.html.erb
+++ b/app/views/night_market/index.html.erb
@@ -1,5 +1,8 @@
 <% content_for :disable_breadcrumb, true %>
 <%= render SliderComponent.new(id: 'slider', sliders: @sliders) %>
+<section class="block text-block">
+  Hello World
+</section>
 <section id="night-market">
   <div class="container mt-5 mb-4">
     <div class="row flex-warp">
