--- a/app/views/night_market/index.html.erb
+++ b/app/views/night_market/index.html.erb
@@ -1,8 +1,10 @@
 <% content_for :disable_breadcrumb, true %>
 <%= render SliderComponent.new(id: 'slider', sliders: @sliders) %>
+<% @blocks.each do |block| %>
 <section class="block text-block">
-  Hello World
+  <%= sanitize block.content %>
 </section>
+<% end %>
 <section id="night-market">
   <div class="container mt-5 mb-4">
     <div class="row flex-warp">
