--- a/app/views/admin/shared/_sidebar.html.slim
+++ b/app/views/admin/shared/_sidebar.html.slim
@@ -17,6 +17,7 @@ aside.c-sidebar.c-sidebar-dark.c-sidebar-fixed.c-sidebar-lg-show
       = admin_sidebar_item t('.new'), new_admin_slider_path, icon: 'plus'
     = admin_sidebar_treeview t('.blocks'), icon: 'cube' do
       = admin_sidebar_item t('.list'), admin_blocks_path, icon: 'list'
+      = admin_sidebar_item t('.new'), new_admin_block_path, icon: 'plus'
     - if tenant_site?
       = admin_sidebar_treeview t('.partner'), icon: 'handshake-o' do
         = admin_sidebar_item t('.list'), admin_partners_path, icon: 'list'
