--- a/app/assets/stylesheets/layout/_about.scss
+++ b/app/assets/stylesheets/layout/_about.scss
@@ -9,7 +9,8 @@
       position: absolute;
 
       top: 0;
-      left: 0;
+      left: -50%;
+      transform: translateX(-50%);
 
       max-width: 100%;
     }
