--- a/app/views/admin/news/_form.html.slim
+++ b/app/views/admin/news/_form.html.slim
@@ -6,7 +6,7 @@
       = f.input :status, collection: ['draft', 'published']
       = f.input :content, as: :text, input_html: { data: { editor: true }, rows: 20 }
       = f.input :thumbnail do
-        = f.input_field :thumbnail
+        = f.input_field :thumbnail, required: false
         - if @news.thumbnail.present?
           = image_tag @news.thumbnail_url(:thumb)
           = f.input :remove_thumbnail, as: :boolean
