--- a/app/views/night_market/index.html.erb
+++ b/app/views/night_market/index.html.erb
@@ -1,14 +1,6 @@
 <% content_for :disable_breadcrumb, true %>
 <%= render SliderComponent.new(id: 'slider', sliders: @sliders) %>
-<% @blocks.each do |block| %>
-<section class="block text-block">
-  <div class="container mt-5 mb-4">
-    <div class="col-12">
-      <%= sanitize block.content %>
-    </div>
-  </div>
-</section>
-<% end %>
+<%= render BlockComponent.with_collection(@blocks) %>
 <section id="night-market">
   <div class="container mt-5 mb-4">
     <div class="row flex-warp">
