--- a/app/components/block_component.html.erb
+++ b/app/components/block_component.html.erb
@@ -8,11 +8,13 @@
 
         <!-- Create a Twitch.Embed object that will render within the "twitch-embed" element -->
         <script type="text/javascript">
-          new Twitch.Embed("twitch-embed", {
-            width: 854,
-            height: 480,
-            channel: "<%= @block.content.strip %>",
-          });
+          document.addEventListener('turbolinks:load', function() {
+            new Twitch.Embed("twitch-embed", {
+              width: '100%',
+              height: 480,
+              channel: "<%= @block.content.strip %>",
+            });
+          })
         </script>
       <% else %>
         <%= sanitize @block.content %>
