--- a/app/components/block_component.html.erb
+++ b/app/components/block_component.html.erb
@@ -12,7 +12,7 @@
             new Twitch.Embed("twitch-embed", {
               width: '100%',
               height: 480,
-              channel: "<%= @block.content.strip %>",
+              channel: "<%= strip_tags @block.content %>",
             });
           })
         </script>
