--- a/app/components/block_component.html.erb
+++ b/app/components/block_component.html.erb
@@ -2,18 +2,13 @@
   <div class="container mt-5 mb-4">
     <div class="col-12">
       <% if twitch_live? %>
-        <div id="twitch-embed" class="mx-auto"></div>
-
-        <!-- Create a Twitch.Embed object that will render within the "twitch-embed" element -->
-        <script type="text/javascript">
-          document.addEventListener('turbolinks:load', function() {
-            new Twitch.Embed("twitch-embed", {
-              width: '100%',
-              height: 480,
-              channel: "<%= strip_tags @block.content %>",
-            });
-          })
-        </script>
+        <iframe
+          id="twitch-embed"
+          src="https://player.twitch.tv/?<%= strip_tags @block.content %>&parent=<%= request.host %>"
+          height="100%"
+          width="480"
+          allowfullscreen>
+        </iframe>
       <% else %>
         <%= sanitize @block.content %>
       <% end %>
