--- a/app/assets/stylesheets/_variables.scss
+++ b/app/assets/stylesheets/_variables.scss
@@ -1,5 +1,5 @@
 // Fonts
-$font-family-sans-serif: 'Noto Sans TC', -apple-system, sans-serif;
+$font-family-sans-serif: 'Noto Sans TC', system-ui, -apple-system, sans-serif;
 $headings-font-weight: 800;
 
 // Colors
