--- a/app/assets/stylesheets/modules/_colors.scss
+++ b/app/assets/stylesheets/modules/_colors.scss
@@ -1,13 +1,13 @@
 // Colors
 
 .bg-pink {
-  background: var(--pink);
+  background: var(--bs-pink);
 
   a {
-    color: var(--white);
+    color: var(--bs-white);
   }
 }
 
 .text-pink {
-  color: var(--pink);
+  color: var(--bs-pink);
 }
