--- a/app/assets/stylesheets/modules/_section.scss
+++ b/app/assets/stylesheets/modules/_section.scss
@@ -2,6 +2,6 @@ section {
   .heading {
     text-transform: uppercase;
 
-    span { color: var(--pink); }
+    span { color: var(--bs-pink); }
   }
 }
