--- a/app/assets/stylesheets/layout/_navbar.scss
+++ b/app/assets/stylesheets/layout/_navbar.scss
@@ -3,7 +3,7 @@
 .nav-item {
   &.active {
     a {
-      color: var(--pink);
+      color: var(--bs-pink);
     }
   }
 }
@@ -13,7 +13,7 @@
   .navbar-nav {
     .active {
       .nav-link {
-        color: var(--pink);
+        color: var(--bs-pink);
       }
     }
   }
