--- a/app/assets/stylesheets/modules/_session.scss
+++ b/app/assets/stylesheets/modules/_session.scss
@@ -93,12 +93,12 @@
   }
 
   &__badge {
-    @extend .mx-2;
+    @extend .me-2;
 
     font-weight: normal;
 
     &:last-child {
-      @extend .mx-0;
+      @extend .me-0;
     }
   }
 }
