--- a/app/views/news/show.html.slim
+++ b/app/views/news/show.html.slim
@@ -32,5 +32,5 @@ section#news
                     = link_to news do
                       h6.news__title = news.title
                     .post-date
-                      i.fa.fa-calendar.mr-2
+                      i.fa.fa-calendar.me-2
                       = l news.created_at, format: :short
